--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,27 +1,3 @@
-<nav class="navbar navbar-expand-lg bg-dark" data-color="orange">
-  <div class="container">
-<!--    <a class="navbar-brand" href="#">Home</a>-->
-<!--    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">-->
-<!--      <span class="navbar-toggler-bar navbar-kebab"></span>-->
-<!--      <span class="navbar-toggler-bar navbar-kebab"></span>-->
-<!--      <span class="navbar-toggler-bar navbar-kebab"></span>-->
-<!--    </button>-->
-    <div class="collapse navbar-collapse" id="navbarColor01">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Blog</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-<app-weather></app-weather>
+<app-header></app-header>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
